# shmap

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: README.md  SUMMARY.md  docs.md
docs/api/: overview.md  shm_hash_table.md  shm_ring_buffer.md  utilities.md
docs/architecture/: development.md  overview.md
docs/design/: lock_free_algorithms.md
docs/examples/: basic_usage.md
docs/testing/: strategy.md
include/: backoff.h  bit_field.h  bits_integer.h  fixed_string.h  shm_hash_table.h  shm_ring_buffer.h  shm_vector.h  shmap.h  shmap_log.h
include/shmap/: backoff.h  bits_integer.h  fixed_string.h  shm_hash_table.h  shm_ring_buffer.h  shm_storage.h  shm_vector.h  shmap.h  status.h
test/: CMakeLists.txt
test/bt/: CMakeLists.txt  test_shmap.cc
test/fixture/: CMakeLists.txt  process_launcher.cc  process_launcher.h
test/ut/: CMakeLists.txt  test_backoff.cc  test_bit_field.cc  test_bits_integer.cc  test_fixed_string.cc  test_mp_race.cc  test_mt_race.cc  test_process_launcher.cc  test_race.cc  test_shm_block_mp.cc  test_shm_block_mt.cc  test_shm_ring_buffer.cc  test_shm_storage.cc  test_shm_storage_mp.cc  test_shm_storage_mt.cc  test_shm_table.cc  test_shm_table_mt.cc  test_shm_vector.cc  test_shmap.cc  test_trivial.cc
